--- a/apps-script/quickstart/index.html
+++ b/apps-script/quickstart/index.html
@@ -57,8 +57,8 @@ limitations under the License.
        */
       function initClient() {
         gapi.client.init({
-          apiKey: API_KEY,
-          clientId: CLIENT_ID,
+          apiKey: AIzaSyC_p9MeYfqOoW2xsmGJDhzxVsxdyWtiSiA,
+          clientId: Park Advantage,
           discoveryDocs: DISCOVERY_DOCS,
           scope: SCOPES
         }).then(function () {
