--- a/apps-script/quickstart/index.html
+++ b/apps-script/quickstart/index.html
@@ -31,8 +31,8 @@ limitations under the License.
 
     <script type="text/javascript">
       // Client ID and API key from the Developer Console
-      var CLIENT_ID = '<YOUR_CLIENT_ID>';
-      var API_KEY = '<YOUR_API_KEY>';
+      var CLIENT_ID = '< 531022768685-3p88idllqjsg0uutpnq76oc8p418qshv.apps.googleusercontent.com >';
+      var API_KEY = '< AIzaSyC_p9MeYfqOoW2xsmGJDhzxVsxdyWtiSiA';
 
       // Array of API discovery doc URLs for APIs used by the quickstart
       var DISCOVERY_DOCS = ["https://script.googleapis.com/$discovery/rest?version=v1"];
